Solved of Webkit bug and Alignement bug

--- a/Application/Public/Classic/Css/bootstrap.css
+++ b/Application/Public/Classic/Css/bootstrap.css
@@ -1036,6 +1036,7 @@ fieldset {
 
 legend {
     display: block;
+    height: 60px;
     width: 100%;
     padding: 0;
     margin-bottom: 20px;
