--- a/Application/Public/Classic/Css/style.css
+++ b/Application/Public/Classic/Css/style.css
@@ -45,3 +45,8 @@ footer {
     display      : inline;
     padding-left : 50px;
 }
+
+.description {
+    padding-top  : 10px;
+    padding-left : 5px;
+}
